# Templates

./: C Source File.c  Desktop File.desktop  Glade UI File.ui  Gresource XML.gresource.xml  README.md  meson.build
